testdata/baselines/reference/submodule/conformance/jsObjectsMarkedAsOpenEnded.errors.txt
b.ts(3,29): error TS2339: Property 'a' does not exist on type '{}'.
b.ts(4,14): error TS2339: Property 'a' does not exist on type '{}'.
b.ts(5,8): error TS2339: Property 'a' does not exist on type '{}'.
b.ts(6,10): error TS2339: Property 'a' does not exist on type '{}'.


==== a.js (0 errors) ====
    var variable = {};
    variable.a = 0;
    
    class C {
        initializedMember = {};
        constructor() {
            this.member = {};
            this.member.a = 0;
        }
    }
    
    var obj = {
        property: {}
    };
    
    obj.property.a = 0;
    
    var arr = [{}];
    
    function getObj() {
        return {};
    }
    
    
==== b.ts (4 errors) ====
    variable.a = 1;
    (new C()).member.a = 1;
    (new C()).initializedMember.a = 1;
                                ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    obj.property.a = 1;
                 ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    arr[0].a = 1;
           ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    getObj().a = 1;
             ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    
    